--- a/ghcjs-game-example.cabal
+++ b/ghcjs-game-example.cabal
@@ -19,9 +19,22 @@ library
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
-executable ghcjs-game-example-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
+executable first-exe
+  hs-source-dirs:      app/first
+  main-is:             First.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
+  build-depends:       base
+                     , ghcjs-game-example
+                     , ghcjs-dom
+                     , jsaddle
+                     , ghcjs-base
+                     , lens
+                     , text
+  default-language:    Haskell2010
+
+executable game-exe
+  hs-source-dirs:      app/game
+  main-is:             Game.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
   build-depends:       base
                      , ghcjs-game-example
