--- a/ghcjs-game-example.cabal
+++ b/ghcjs-game-example.cabal
@@ -26,6 +26,16 @@ executable first-exe
   build-depends:       base
   default-language:    Haskell2010
 
+executable calljs-exe
+  hs-source-dirs:      app/calljs
+  main-is:             CallJS.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
+  build-depends:       base
+                     , ghcjs-base
+                     , jsaddle
+                     , lens
+  default-language:    Haskell2010
+
 executable game-exe
   hs-source-dirs:      app/game
   main-is:             Game.hs
