--- a/ghcjs-game-example.cabal
+++ b/ghcjs-game-example.cabal
@@ -36,6 +36,14 @@ executable calljs-exe
                      , lens
   default-language:    Haskell2010
 
+executable timeout-exe
+  hs-source-dirs:      app/timeout
+  main-is:             Timeout.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
+  build-depends:       base
+                     , ghcjs-base
+  default-language:    Haskell2010
+
 executable game-exe
   hs-source-dirs:      app/game
   main-is:             Game.hs
