--- a/ghcjs-game-example.cabal
+++ b/ghcjs-game-example.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , ghcjs-dom
   default-language:    Haskell2010
 
 executable first-exe
@@ -42,6 +43,18 @@ executable timeout-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
   build-depends:       base
                      , ghcjs-base
+  default-language:    Haskell2010
+
+executable dom-exe
+  hs-source-dirs:      app/dom
+  main-is:             Dom.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -DGHCJS_BROWSER
+  build-depends:       base
+                     , ghcjs-base
+                     , jsaddle
+                     , lens
+                     , mtl
+                     , ghcjs-dom
   default-language:    Haskell2010
 
 executable game-exe
