--- a/stack.yaml
+++ b/stack.yaml
@@ -10,11 +10,11 @@ setup-info:
         sha1: d2cfc25f9cda32a25a87d9af68891b2186ee52f9
 extra-deps:
 - ghcjs-dom-0.8.0.0
-- ghcjs-dom-jsaddle-0.8.0.0
-- jsaddle-0.8.3.0
-- jsaddle-dom-0.8.0.0
-- ref-tf-0.4.0.1
 - ghcjs-dom-jsffi-0.8.0.0
+# - ghcjs-dom-jsaddle-0.8.0.0
+- jsaddle-0.8.3.0
+# - jsaddle-dom-0.8.0.0
+# - ref-tf-0.4.0.1
 compiler-check: match-exact
 compiler: ghcjs-0.2.1.9007019_ghc-8.0.1
 resolver: lts-7.19
